<resources>
    <string name="app_name">Driper - Tài xế</string>
    <string name="title_activity_maps">Driper - Đặt xe</string>
    <string name="phone">Số điện thoại</string>
    <string name="name">Tên</string>
    <string name="txt_register">Đăng ký thông tin của bạn để trở thành đối tác của Driper</string>
    <string name="next">Tiếp</string>
    <string name="txt_verify">Nhập mã 4 số chứng thực đã được gửi đến số điện thoại %d</string>
    <string name="verify">Mã xác nhận</string>
    <string name="resend"><u>Gửi lại mã</u></string>
    <string name="choose_to">Chọn điểm đến</string>
    <string name="book">Đặt xe</string>
    <string name="bike">Xe Mô - tô</string>
    <string name="cost">giá %d VNĐ</string>
    <string name="car4">Ô-tô 4 chỗ</string>
    <string name="car7">Ô-tô 7 chỗ</string>
    <string name="finded_driver">Chúng tôi đã tìm thấy một tài xế</string>
    <string name="driver_for">Driver %s</string>
    <string name="for_minute">%d phút</string>
    <string name="for_minute_driver_come">Tài xế sẽ đến đón bạn.</string>
    <string name="txt_finding_driver">Đang tìm kiếm tài xế...</string>
    <string name="cancel">Hủy</string>
    <string name="cuoc_xe_done">Cuốc xe đã hoàn thành!</string>
    <string name="danh_gia_cam_xuc">Hãy cho chúng tôi biết về cảm xúc của bạn?</string>
    <string name="hai_long">Hài lòng</string>
    <string name="khong_hai_long">Không hài lòng</string>
    <string name="danh_gia_tai_xe">Cho điểm</string>
    <string name="nhan_xet_tai_xe">Nhận xét</string>
    <string name="danh_gia">Đánh giá của bạn về dịch vụ</string>
    <string name="done">Gửi</string>
    <string name="send">Gửi</string>
    <string name="chuyen_bi_huy">Xin lỗi, vì một lý do nào đó tài xế đã hủy cuốc xe của bạn.</string>
    <string name="ok">OK</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="txt_login">Nhập số điện thoại bạn đã đăng kí trở thành đối tác tài xế để đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="personal_infor">Thông tin cá nhân</string>
    <string name="nguoi_rate">%d - %f</string>
    <string name="new_book">Cuốc mới</string>
    <string name="cost_book">%d VNĐ</string>
    <string name="book_km">%d KM</string>
    <string name="book_category">Ô tô 4 bánh</string>
    <string name="da_nhan_cuoc_xe">Đã nhận cuốc xe</string>
    <string name="hoa_don">Thanh toán</string>
    <string name="gia_cuoc">Số tiền trên 1 KM</string>
    <string name="khoang_cach">Quãng đường</string>
    <string name="km_book">%f KM</string>
    <string name="sum">Tổng</string>
    <string name="txt_lock">Chạm vào biểu tượng khóa để sẵn sàng nhận các quốc xe mới</string>
    <string name="lock">Bạn đã để trôi yêu cầu cuốc xe</string>
    <string name="apply">Xác nhận</string>
    <string name="register_driper">Trở thành đối tác của Driper</string>
    <string name="txt_register_cmt">Ảnh mặt trước và sau chứng minh thư</string>
    <string name="txt_register_anh3x4">Ảnh chân dung có mặt của bạn</string>
    <string name="txt_register_blx">Ảnh mặt trước và sau bằng lái xe</string>
    <string name="txt_register_gtx">Ảnh mặt trước và sau giấy tờ xe</string>
    <string name="txt_register_bao_hiem_xe">Ảnh mặt trước và sau bảo hiểm xe</string>
    <string name="tag_im_path">path image</string>
    <string name="hint">Biển số xe - Hãng xe - Tên xe</string>
    <string name="chap_nhan">Nhân cuốc</string>
    <string name="tu_choi">Từ chối</string>
</resources>
