<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp10"
            android:text="@string/new_book"
            android:textColor="@color/color_white" />

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp10"
            android:text="@string/cost_book"
            android:textColor="@color/color_white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_search_to_from"
            android:elevation="2dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp10"
                android:paddingRight="@dimen/dp10">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:padding="@dimen/dp10"

                    android:text="@string/book_km"
                    android:textColor="@color/color_black" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/color_yellow"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/book_category"
                    android:textColor="@color/color_black" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:padding="@dimen/dp10"
                    android:text="45"
                    android:textColor="@color/color_red" />


            </LinearLayout>


            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/dp20"
                android:text="Ngõ 134 đường Cầu diễn, Bắc từ liêm, Hà Nội"
                android:textColor="@color/color_black" />


            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_book_to"
                android:gravity="center"
                android:padding="@dimen/dp20"
                android:text="Ngõ 134 đường Cầu diễn, Bắc từ liêm, Hà Nội"
                android:textColor="@color/color_black" />


        </LinearLayout>


    </LinearLayout>

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_main"
        android:gravity="center"
        android:padding="@dimen/dp10"
        android:text="@string/login"
        android:textColor="@color/color_white" />
</LinearLayout>
